# curse

./: .gitignore  package.json  pyproject.toml
app/: main.py  settings.py
app/api/: factory.py
app/api/routers/: __init__.py  api_router.py  main_router.py
app/api/templates/: rates.html
app/backend/: api.py  main.py
app/backend/db/: __init__.py  redis.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.tsx
app/frontend/src/components/: CustomDescriptions.tsx  CustomTable.tsx  D.tsx  Full.tsx  type.json
app/frontend/src/components/types/: rates.ts
app/web/pages/: index.html
