[tool.poetry]
name = "curse"
version = "0.1.0"
description = ""
authors = ["Volodymyr Klimchuk <klimchuk.volodymyr@lll.kpi.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
